--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,11 +45,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".orders.Orders_Activity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
+        android:name=".orders.Orders_Activity"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".orders.Order_Create_Activity"
+            android:name=".orders.Orders_MapView_Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
