--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:name=".customfont.CustomFont"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@drawable/ic_app_icon"
+        android:icon="@mipmap/ic_app_icon1"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
@@ -50,6 +50,10 @@
         android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".orders.Orders_MapView_Activity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".orders.Order_LongText_Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
@@ -322,6 +326,14 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".orders.Duration_Activity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".orders.Orders_StorageLocation_Filter_Activity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".orders.Activity_Type_Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
