--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 22 15:47:02 IST 2018
-ndk.dir=E\:\\ANDROID_SDK\\ndk-bundle
-sdk.dir=E\:\\ANDROID_SDK
+#Mon Feb 11 11:46:06 IST 2019
+ndk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk
