--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 22 15:47:02 IST 2018
-ndk.dir=E\:\\ANDROID_SDK\\ndk-bundle
-sdk.dir=E\:\\ANDROID_SDK
+#Thu Feb 21 10:51:03 IST 2019
+sdk.dir=C\:\\Users\\Enst_PC\\AppData\\Local\\Android\\Sdk
