Fixed few issues of orders and notification,Maintainance plan(08_03_2019)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-        android:name=".orders.Orders_Activity"
+        android:name=".orders.Orders_Activity1"
         android:screenOrientation="portrait"
         android:windowSoftInputMode="stateHidden" />
         <activity
