--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-        android:name=".orders.Orders_Activity1"
+        android:name=".orders.Orders_Activity"
         android:screenOrientation="portrait"
         android:windowSoftInputMode="stateHidden" />
         <activity
@@ -72,7 +72,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".notifications.Notifications_List_Activity1"
+            android:name=".notifications.Notifications_List_Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
