--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 20 11:37:22 IST 2019
-ndk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk
+#Tue Apr 02 18:59:25 IST 2019
+sdk.dir=C\:\\Users\\Enst_PC\\AppData\\Local\\Android\\Sdk
