App upload for playstore version code 5

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 08 12:46:17 IST 2019
-ndk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\RAKSHITHA V SUVARNA\\AppData\\Local\\Android\\Sdk
+#Wed Apr 17 17:32:29 IST 2019
+sdk.dir=C\:\\Users\\Enst_PC\\AppData\\Local\\Android\\Sdk
